bg img fix for jumping shadow

--- a/common/scss/styles.scss
+++ b/common/scss/styles.scss
@@ -50,8 +50,8 @@ $display-font-sizes: (
     &::before {
         content: ""; // ::before and ::after both require content
         position: fixed;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         background-color: black;
         opacity: 0.3;
         z-index: 1;
